sre-instrumentation-challenge/kubernetes/storage-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-api
  namespace: axpo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storage-api
  template:
    metadata:
      labels:
        app: storage-api
    spec:
      containers:
        - name: storage-api
          image: sre-instrumentation-challenge.axpo.com/storage-api:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: storage-api
  namespace: axpo
spec:
  selector:
    app: storage-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
